<resources>
    <string name="app_name">ChannelX</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="create_channel">Create Channel</string>
    <string name="create_channe_hint">Enter a name</string>
    <string name="join_channel">Join Channel</string>
    <string name="join_channel_hint">Enter an ID</string>
    <string name="create_channel_title">Create Channel</string>
    <string name="onymous">Onymous</string>
    <string name="anonymous">Anonymous</string>
    <string name="upload_channel_image">Upload an image</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_name_hint">Business Meeting</string>
    <string name="expired_date">Expired Date</string>
    <string name="expired_date_hint">2018-1-1</string>
    <string name="create_channel_button">Create</string>
    <string name="create_channel_group">Group</string>
    <string name="create_channel_one2one">One To One</string>
    <string name="channel_settings_title">Channel Settings</string>
    <string name="leave_channel_text">Leave the Channel</string>
    <string name="nickname">Nickname</string>
    <string name="theme">Theme</string>
    <string name="members">Members</string>
    <string name="more">More</string>
    <string name="default_theme">----</string>
    <string name="destroy_channel_text">Destroy the Channel</string>
    <string name="default_creator">Creator</string>
    <string name="creator">Creator</string>
    <string name="me">Me</string>
    <string name="destroyed">DESTROYED</string>
    <string name="qr_title">QR</string>
    <string name="member_list_title">Members</string>
    <string name="from">From</string>
    <string name="open_time_default">00:00</string>
    <string name="to">To</string>
    <string name="closed_time_default">24:00</string>
    <string name="schedule">Schedule</string>
    <string name="default_schedule">00:00-24:00</string>
    <string name="switch_text">Switch</string>
    <string name="settings">Settings</string>

</resources>
